[package]
name = "steganos"
version = "0.1.1"
edition = "2018"

default-run = "steganos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
clap = {version = "2.33.3", features = ["yaml"]}

[dependencies.gtk]
package = "gtk4"
version = "0.2.0"

[[bin]]
name = "steganos-gtk"
path = "src/gtk.rs"
